--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=clientes_vidracaria;user=MarcoMilagres;password=MSJ#A2MSECUB"
+    "DefaultConnection": "server=localhost;port=3306;database=clientes_vidracaria;user=root;password=rokbende0"
   }
 }
