Adicionada a tabela de itens do orçamento

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,11 +7,11 @@
   },
   "AllowedHosts": "*",
 
-  //"ConnectionStrings": {
-  //  "DefaultConnection": "server=localhost;port=3306;database=clientes_vidracaria;user=root;password=rokbende0"
-  //}
-
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=clientes_vidracaria;user=root;password=epfr9ovhe?tc@*"
+    "DefaultConnection": "server=localhost;port=3306;database=clientes_vidracaria;user=root;password=rokbende0"
   }
+
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "server=localhost;port=3306;database=clientes_vidracaria;user=root;password=epfr9ovhe?tc@*"
+  //}
 }
