--- a/VidracariaDoMarcinho.csproj
+++ b/VidracariaDoMarcinho.csproj
@@ -1,51 +1,64 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <AssemblyName>VidracariaDoMarcinho</AssemblyName>
-    <RootNamespace>VidracariaDoMarcinho</RootNamespace>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<AssemblyName>VidracariaDoMarcinho</AssemblyName>
+		<RootNamespace>VidracariaDoMarcinho</RootNamespace>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <Compile Remove="NovaPasta\**" />
-    <Compile Remove="Views\NovaPasta1\**" />
-    <Compile Remove="wwwroot\NovaPasta\**" />
-    <Content Remove="NovaPasta\**" />
-    <Content Remove="Views\NovaPasta1\**" />
-    <Content Remove="wwwroot\NovaPasta\**" />
-    <EmbeddedResource Remove="NovaPasta\**" />
-    <EmbeddedResource Remove="Views\NovaPasta1\**" />
-    <EmbeddedResource Remove="wwwroot\NovaPasta\**" />
-    <None Remove="NovaPasta\**" />
-    <None Remove="Views\NovaPasta1\**" />
-    <None Remove="wwwroot\NovaPasta\**" />
-  </ItemGroup>
+	<ItemGroup>
+		<Compile Remove="NovaPasta\**" />
+		<Compile Remove="Views\NovaPasta1\**" />
+		<Compile Remove="wwwroot\NovaPasta\**" />
+		<Content Remove="NovaPasta\**" />
+		<Content Remove="Views\NovaPasta1\**" />
+		<Content Remove="wwwroot\NovaPasta\**" />
+		<EmbeddedResource Remove="NovaPasta\**" />
+		<EmbeddedResource Remove="Views\NovaPasta1\**" />
+		<EmbeddedResource Remove="wwwroot\NovaPasta\**" />
+		<None Remove="NovaPasta\**" />
+		<None Remove="Views\NovaPasta1\**" />
+		<None Remove="wwwroot\NovaPasta\**" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Compile Remove="Views\Materiais\EditarMaterial.cs" />
-  </ItemGroup>
+	<ItemGroup>
+		<Compile Remove="Views\Materiais\EditarMaterial.cs" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <None Remove="Views\Pedidos\Index.cshtml.txt" />
-  </ItemGroup>
+	<ItemGroup>
+		<None Remove="Views\Pedidos\Index.cshtml.txt" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="EntityFramework" Version="6.5.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.9">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="EntityFramework" Version="6.5.1" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.9">
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <None Update="appsettings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
+	<ItemGroup>
+		<None Update="appsettings.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
+
+	<!-- <ItemGroup>
+		<None Include="wwwroot/images/icon.png" />
+		<ApplicationIcon>wwwroot/images/icon.png</ApplicationIcon>
+	</ItemGroup> -->
+
+	<ItemGroup>
+		<None Include="wwwroot/images/icon.ico" />
+	</ItemGroup>
+
+	<PropertyGroup>
+		<ApplicationIcon>wwwroot/images/icon.ico</ApplicationIcon>
+	</PropertyGroup>
 
 </Project>
