--- a/VidracariaDoMarcinho.csproj
+++ b/VidracariaDoMarcinho.csproj
@@ -42,6 +42,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Content Include="Vidracaria.sql" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="EntityFramework" Version="6.5.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.9">
